--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ leurs similitudes. </p>
                 </div>
                 <!-- Project Four Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" id="img1" src="assets/images/Capture d’écran 2021-10-06 à 16.42.16.png" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" id="img1" src="assets/images/abecedaire.png" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
